# rust_book

./: Cargo.toml  New Text Document.txt  hello.txt
src/: chapter12_lib.rs  chapters.rs  justBookNotes_lib.rs  lib.rs  main.rs  mod_test3.rs  trial.rs
src/async_rust/: chapter_1.rs  chapter_2.rs  chapter_3.rs  mod.rs
src/chapters/: chapter12_lib.rs  chapter_10.rs  chapter_11.rs  chapter_12.rs  chapter_13.rs  chapter_14.rs  chapter_15.rs  chapter_15_4_thru_6.rs  chapter_16.rs  chapter_16_4.rs  chapter_17.rs  chapter_18.rs  chapter_19.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  chapter_6.rs  chapter_8.rs  chapter_9.rs
src/mod_test/: mod1.rs
src/mod_test3/: blah.rs  mod.rs
src/other_smart_pointers/: cow.rs  mod.rs
src/trial2/: chapters.rs  mod.rs
src/trial2/chapters/: chapters_9.rs
src/trials/: iterators.rs  mod.rs  serde.rs
tests/: integration_test.rs
tests/test_integrate_mod/: mod.rs
